# Phonebook-AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_ws.py
backend/: .dockerignore  .gitignore  Dockerfile  db.sqlite3  pyproject.toml  start.sh
backend/agent/: apps.py  context.py  signals.py  tasks.py
backend/agent/agent/: __init__.py  agent.py  tools.py
backend/agent/agents/: __init__.py  react_agent.py  tools.py
backend/contacts/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  signals.py  tasks.py  urls.py  views.py  weaviate.py
backend/contacts/migrations/: 0001_initial.py  0002_alter_contact_user_alter_contact_unique_together.py
backend/conversations/: admin.py  apps.py  consumers.py  models.py  routing.py  signals.py  urls.py  utils.py  views.py
backend/conversations/migrations/: 0001_initial.py  0002_alter_message_conversation.py  0003_alter_message_type.py
backend/message/: admin.py  consumers.py  models.py  routing.py  serializers.py  signals.py  urls.py  views.py
backend/message/migrations/: 0001_initial.py  0002_alter_conversation_in_progress.py
backend/phonebook/: asgi.py  celery.py  routing.py  settings.py  urls.py
backend/users/: serializers.py  urls.py  views.py
backend/users/authentication/: channels.py
frontend/: Dockerfile  Dockerfile.old  package-lock.json  package.json  vite.config.ts
frontend/app/: app.css  models.ts  root.tsx  routes.ts
frontend/app/api/: authApi.ts  contactApi.ts  conversationApi.ts  messageApi.ts  userApi.ts
frontend/app/components/: AddContactCard.tsx  AddContactModal.tsx  Chat.tsx  ChatMessagesList.tsx  ChatSendField.tsx  ContactCard.tsx  ContactForm.tsx  ContactsList.tsx  ConversationTabs.tsx  Navbar.tsx  PhoneInputField.tsx  ProtectedRoute.tsx  UpdateContactModal.tsx  addContactCard.tsx  addContactModal.tsx  chat.tsx  chatMessage.tsx  chatMessagesList.tsx  contactCard.tsx  contactsList.tsx  conversationTabs.tsx  loginPanel.tsx  protectedRoute.tsx  registerPanel.tsx  updateContactModal.tsx
nginx/: nginx.conf
(+33 files in other folders)
