[project]
name = "phonebook"
version = "0.1.0"
description = "Phone book with AI assistant"
authors = [
    {name = "Lukasz Klimkiewicz"}
]
readme = "README.md"
requires-python = ">=3.12"
package-mode = false
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
