[project]
name = "phonebook"
version = "0.1.0"
description = "Phone book with AI assistant"
authors = [
    {name = "Lukasz Klimkiewicz"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
package-mode = false
dependencies = [
    "django (>=5.2.2,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "dj-database-url (>=3.0.0,<4.0.0)",
    "psycopg2[binary,pool] (>=2.9.10,<3.0.0)",
    "drf-yasg (>=1.21.10,<2.0.0)",
    "channels (>=4.2.2,<5.0.0)",
    "daphne (>=4.2.0,<5.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "channels-redis (>=4.2.1,<5.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "langchain-openai (>=0.3.21,<0.4.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-postgres (>=0.0.14,<0.0.15)",
    "langgraph-checkpoint-postgres (>=2.0.21,<3.0.0)",
    "weaviate-client (>=4.15.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
